--- a/effectsize_example.Rmd
+++ b/effectsize_example.Rmd
@@ -169,17 +169,17 @@ A good first step in any analysis is always to visualize the data:
 ```{r data_plot, fig.height = 2, fig.width = 4}
 p_data <-  # save for the teaser figure
   data %>% 
-  mutate(group = fct_rev(group)) %>%  # to display groups in alphabetical order
-  ggplot(aes(x = group, y = completion_time_ms)) +
-  geom_point(alpha = 0.2) +
-  stat_summary(fun.data = mean_cl_normal) +
-  coord_flip() +
-  ylab("Completion time (ms)") +
-  xlab("Group")
+  ggplot(aes(x = completion_time_ms)) +
+  geom_dotplot(binwidth=5) +
+  facet_grid(group ~ ., switch="y") +
+  scale_y_continuous(breaks = NULL) +
+  geom_vline(xintercept = 0) +
+  xlab("Completion time (ms)") +
+  ylab("Group")
 p_data
 ```
 
-This plot shows all observed completion times, as well as the mean completion time and 95% confidence interval of the mean in each condition.
+This plot shows all observed completion times in each group.
 
 ## Calculating simple effect size
 
