--- a/references.bib
+++ b/references.bib
@@ -148,3 +148,13 @@
   title = {{Publication Manual of the American Psychological Association}},
   year = {2001}
 }
+
+@article{Sauro2010,
+  author = {Sauro, Jeff and Lewis, James R.},
+  doi = {10.1145/1753326.1753679},
+  journal = {Proceedings of the 28th international conference on Human factors in computing systems - CHI '10},
+  title = {{Average task times in usability tests}},
+  url = {http://portal.acm.org/citation.cfm?doid=1753326.1753679},
+  year = {2010}
+}
+
