--- a/effectsize_supplement.Rmd
+++ b/effectsize_supplement.Rmd
@@ -64,7 +64,7 @@ See that exemplar for more information.
 
 ### Approach 1: Difference in means with Student's t confidence interval
 
-This is the approach used in the exemplar. While the response distributions are non-normal, the sampling distribution of the difference in means will still be defined on $(-\infty, +\infty)$ and approximately symmetrical [citation needed / double check this], so we can compute a *Student's t distribution confidence interval* for the difference in means.
+This is the approach used in the exemplar. While the response distributions are non-normal, the sampling distribution of the difference in means will still be defined on $(-\infty, +\infty)$ and approximately symmetrical (per the central limit theorem), so we can compute a *Student's t distribution confidence interval* for the difference in means.
 
 ```{r t_test}
 t_result <- 
@@ -75,9 +75,9 @@ t_result
 
 The `tidy()`ed output of the `t.test()` function includes an estimate of the mean difference in milliseconds (`estimate`) as well as the lower (`conf.low`) and upper (`conf.high`) bounds of the 95% confidence interval. 
 
-### Approach 2a: Ratio of medians with Student's t confidence interval on log-scale
+### Approach 2a: Ratio of geometric means with Student's t confidence interval on log-scale
 
-For responses that are assumed to be log-normal, one alternative is to calculate the mean difference on the log scale. Because the mean on the log scale of a log-normal distribution is equal to the median of the distribution of the untransformed responses, this is equivalent to calculating a ratio of medians on the untransformed scale (in this case, a ratio of median response times). See the [data transformation](data_transformation) guideline for more information.
+For responses that are assumed to be log-normal, one alternative is to calculate the mean difference on the log scale. Because the mean on the log scale corresponds to the geometric mean of the untransformed responses, this is equivalent to calculating a ratio of geometric means on the untransformed scale (in this case, a ratio of geometric mean response times). See the [data transformation](data_transformation) guideline for more information.
 
 ```{r log_t_test}
 log_t_result <- 
@@ -86,7 +86,7 @@ log_t_result <-
 log_t_result
 ```
 
-We can transform this into a ratio of median response times:
+We can transform this difference (in the log scale) into a ratio of geometric mean response times:
 
 ```{r log_t_to_ratio}
 log_t_ratios <- log_t_result %>%
@@ -94,9 +94,11 @@ log_t_ratios <- log_t_result %>%
 log_t_ratios
 ```
 
-This output shows the estimated median response times (`estimate1` and `estimate2`), and an estimate of the ratio between them (`estimate = estimate1/estimate2`) as well as the lower (`conf.low`) and upper (`conf.high`) bounds of the 95% confidence interval of that ratio. This allows us to estimate how many times slower or faster a given condition is. 
+This output shows the estimated geometric mean response times (`estimate1` and `estimate2`), and an estimate of the ratio between them (`estimate = estimate1/estimate2`) as well as the lower (`conf.low`) and upper (`conf.high`) bounds of the 95% confidence interval of that ratio. This allows us to estimate how many times slower or faster a given condition is. 
 
 However, since we have some sense in this context of how large or small we might want response times to be on the original scale (e.g., people tend to perceive differences on the order of 100ms), it may be easier to interpret effect sizes if we calculate them on that scale.
+
+In this case, the geometric mean of condition A is roughly `r format_num(log_t_ratios$estimate1)` and of B is roughly `r format_num(log_t_ratios$estimate2)`. A is about `r format_num(log_t_ratios$estimate)` $\times$ B, with a 95% confidence interval of [`r format_num(log_t_ratios$conf.low)`$\times$, `r format_num(log_t_ratios$conf.high)`$\times$]. So we have: `r format_num(log_t_ratios$estimate2)` $\times$ `r format_num(log_t_ratios$estimate)` $\approx$ `r format_num(log_t_ratios$estimate1)`.
 
 
 ### Approach 2b: log-normal regression with marginal estimate of difference in means using simulation
@@ -108,7 +110,7 @@ m_log <- lm(log(completion_time_ms) ~ group, data = data)
 m_log
 ```
 
-This model estimates the geometric means in each group (or equivalently the medians in each group---because the geometric mean and the median coincide for the log-normal distribution). However, we want to know the difference in means on the original (time) scale, not on the log scale.
+This model estimates the geometric means in each group. However, we want to know the difference in means on the original (time) scale, not on the log scale.
 
 We can translate the log-scale means into means on the original scale using the fact that if a random variable $X$ is log-normally distributed with mean $\mu$ and standard deviation $\sigma$:
 
